# MattsGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.txt  Jenkinsfile  LICENSE.txt  README.md
Scripts/: Jenkins-Deploy-Doxygen.sh  Linux-Build.sh
Sources/Examples/: CMakeLists.txt  StartupAndWindowing.c
Sources/Examples/ModernOpenGLWithGLEW/: CMakeLists.txt  ModernOpenGLWithGLEW.c
Sources/Examples/StartupAndWindowing/: CMakeLists.txt  StartupAndWindowing.c
Sources/Examples/StartupAndWindowing/Shaders/: RainbowShader.vert.glsl
Sources/Examples/Texturing/: CMakeLists.txt  Texturing.c
Sources/Examples/Texturing/Resource/Shaders/: RainbowShader.frag.glsl  RainbowShader.vert.glsl  TextureShader.frag.glsl  TextureShader.vert.glsl
Sources/Matt-Engine/: CMakeLists.txt  Displays.c  Displays.h  EngineAPI.h  EngineForwardDecls.h  SharedDeclarations.c  SharedDeclarations.h
Sources/Matt-Engine/Graphics/: Displays.c  Displays.h  GraphicsAPI.h  GraphicsInternal.h  Rendering.c  Rendering.h  ShaderManagement.c  ShaderManagement.h  Vertices.c  Vertices.h
Sources/Matt-Engine/Logging/: AppLogger.h  EngineLogger.h  Logging.c  SharedLogStructs.h
Sources/Matt-Engine/Utils/: Callbacks.c  Callbacks.h  Input.c  Input.h  Loader.c  Loader.h  UsefulMacros.h  UtilsAPI.h  UtilsInternal.h  VariableLengthArrays.c  Vertices.h  linmath.h  pch.c  pch.h
Sources/Matt-Engine/Utils/Logging/: AppLogger.h  EngineLogger.h  SharedLogStructs.h
Sources/Matt-Engine/include/Matts-Engine/: Core.h  CoreForwardDecls.h  Engine.h  RequiredGlobals.h
